--- a/Assets/css/secondpagestyle.css
+++ b/Assets/css/secondpagestyle.css
@@ -1,14 +1,22 @@
 html {
-  background-image: linear-gradient(
-    to right top,
-    #bdd44b,
-    #a9da3e,
-    #8ee035,
-    #68e532,
-    #12eb37
-  );
+  /* background-image: linear-gradient( */
+    /* to right top, */
+    /* #bdd44b, */
+    /* #a9da3e, */
+    /* #8ee035, */
+    /* #68e532, */
+    /* #12eb37 */
+  /* ); */
 }
 
 span {
   font-weight: bold;
 }
+
+.background{
+  background: url(https://images.unsplash.com/photo-1516528387618-afa90b13e000?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+  height: 800px;
+  background-position-x: center;
+  background-size: cover;
+  }
+  
