--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,7 +12,7 @@
 }
 #hero{
 background: url(https://images.unsplash.com/photo-1516528387618-afa90b13e000?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
-height: 600px;
+min-height: 600px;
 background-position-x: center;
 background-size: cover;
 }
@@ -58,9 +58,7 @@ ul {
 }
 
 .teamRight {
-  justify-content: right;
-  align-items: right;
-  padding-left: 40%;
+  padding-left: 10%;
 }
 
 .aboutProject {
